# lich-deployer

./: .gitignore  Cargo.toml  README.md  process.txt
src/: components.rs  errors.rs  files.rs  instructions.rs  keypair.rs  main.rs  program.rs  programs.rs  settings.rs  transactions.rs
