[package]
name = "blich-deployer"
version = "0.1.0"
edition = "2021"


[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", features = ["debug", "image", "tokio"]}
tokio = { version = "1.40.0", features = ["fs"] }
rfd = { version = "0.15.0" }
solana-cli-config = "^2.1.6"
solana-client = "^2.1.6"
solana-program = "^2.1.6"
solana-rpc-client = "^2.1.6"
solana-sdk = "^2.1.6"
solana-transaction-status = "^2.1.6"
